--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-filter==22.1
 django-nested-admin==3.4.0
 django-rest-swagger==2.2.0
 djangorestframework==3.14.0
+gunicorn==20.1.0
 idna==3.4
 inflection==0.5.1
 itypes==1.2.0
@@ -20,6 +21,7 @@ MarkupSafe==2.1.1
 openapi-codec==1.3.2
 packaging==21.3
 Pillow==9.2.0
+psycopg2-binary==2.9.5
 pyparsing==3.0.9
 python-dotenv==0.21.0
 python-monkey-business==1.0.0
