--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ pytz==2022.4
 requests==2.28.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
+sentry-sdk==1.10.1
 simplejson==3.17.6
 six==1.16.0
 sqlparse==0.4.3
